--- a/package.json
+++ b/package.json
@@ -3,12 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^5.1.3",
+    "firebase": "^9.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^4.0.1",
+    "react-google-login": "^5.2.2",
+    "react-horizontal-scrolling-menu": "^2.6.1",
+    "react-responsive": "^9.0.0-beta.5",
     "react-scripts": "4.0.3",
+    "reactstrap": "^9.0.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
